# lavagna

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  web.yml
ci/: cargo-out-dir
crates/lavagna/: Cargo.toml
crates/lavagna-bevy/: Cargo.toml
crates/lavagna-bevy/src/: collab.rs  debug.rs  drawing.rs  input.rs  keybinding.rs  lib.rs  local_chalk.rs  local_pen.rs
crates/lavagna/src/: keybinding.rs  local_chalk.rs  main.rs
docker/lavagna-server/: Dockerfile
docker/lavagna-webapp/: .config  Dockerfile
lavagna/: Cargo.toml
lavagna/src/: main.rs
lavagna/src/app/: color.rs  doc.rs  painter.rs
lavagna_android/: Cargo.toml  README.md  release.keystore
lavagna_android/src/: android.rs  lib.rs
lavagna_collab/: Cargo.toml  README.md
lavagna_collab/src/: lib.rs
lavagna_core/: Cargo.toml  README.md
lavagna_core/src/: color.rs  doc.rs  lib.rs  painter.rs  ui.rs
lavagna_pixels/: Cargo.toml  README.md
lavagna_pixels/src/: gui.rs  lib.rs
src/: app.rs  cli.rs  collab.rs  debug.rs  drawing.rs  keybinding.rs  lib.rs  local_chalk.rs  main.rs  ui.rs  web.rs
src/app/: color.rs  doc.rs  line.rs  mod.rs  painter.rs
tools/: android_dev_env  build-docker-image-server  build-docker-image-webapp  build-web  dev-web  watch
www/: .gitignore  index.html  index.html.template
