[package]
name = "lavagna"
version = "2.1.4"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"
include = ["src", "assets", "LICENSE*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.10"
default_features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "x11",
  "png",
]

[dependencies]
bevy_embedded_assets = "0.7"
bevy_framepace = "0.12"
bevy_pancam = "0.8"
bevy_prototype_lyon = "0.8"
bevy_matchbox = "0.6"
ciborium = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Statically disable verbosity level for tracing, to avoid bloating the binary
log = { version = "0.4", features = ["max_level_debug", "release_max_level_error"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_error"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
# Enabeling this feature will enable dynamic linking of Bevy, for faster build
quick-build = ["bevy/dynamic_linking"]

# wasm only dependencies
[target.wasm32-unknown-unknown.dependencies]
tracing-wasm = "0.2.1"
tracing = "0.1.37"
web-sys = { version = "0.3.63", features = ["Window", "Location"] }

# dependencies for all other targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.2.7", features = ["derive"] }
