[package]
name = "lavagna"
version = "1.1.1"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.9"
lavagna_pixels = { path = "../lavagna_pixels" }
lavagna_collab = { path = "../lavagna_collab" }
clap = { version = "4", features = ["derive"] }
rand = "0.8.5"
