[package]
name = "lavagna"
version = "1.1.2"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.9"
lavagna_pixels = { path = "../lavagna_pixels", version = "1.1.2" }
lavagna_collab = { path = "../lavagna_collab", version = "1.1.2" }
clap = { version = "4", features = ["derive"] }
rand = "0.8.5"
