[package]
name = "lavagna_android"
version = "1.0.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
lavagna_pixels = { path = "../lavagna_pixels" }

[target.'cfg(target_os = "android")'.dependencies.ndk-glue]
features = ["logger"]
rev = "7e33384"
git = "https://github.com/rust-windowing/android-ndk-rs"

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
package = "net.pezzato.lavagna"
build_targets = [
  # "armv7-linux-androideabi",
  "aarch64-linux-android",
  # "i686-linux-android",
  # "x86_64-linux-android",
]

apk_name = "lavagna"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 29
max_sdk_version = 29

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.application]
debuggable = false
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
label = "lavagna"
