[package]
name = "lavagna_android"
version = "1.1.2"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

# [target.'cfg(target_os = "android")'.dependencies]
[dependencies]
lavagna_pixels = { path = "../lavagna_pixels", version = "1.1.2" }
ndk-glue = { version = "0.7.0", features = ["logger"] }
ndk-context = { version = "0.1.1" }
jni = "0.19"
log = "0.4"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0
debug = false

# All dependencies (but not this crate itself)
[profile.dev.overrides."*"]
opt-level = 2
debug = false

[package.metadata.android]
package = "net.pezzato.lavagna"
# FIXME To enable other targets, CI must provides the correct toolchains
build_targets = [
  # "armv7-linux-androideabi",
  "aarch64-linux-android",
  # "i686-linux-android",
  # "x86_64-linux-android",
]

apk_name = "lavagna"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 29
max_sdk_version = 29

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.signing.release]
# FIXME keystore and password must be secret
path = "release.keystore"
keystore_password = "this_is_the_storepass"

[package.metadata.android.application]
debuggable = false
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
label = "lavagna"

# See https://developer.android.com/guide/topics/manifest/activity-element
[package.metadata.android.application.activity]

# See https://developer.android.com/guide/topics/manifest/activity-element#config
config_changes = "orientation|keyboardHidden|screenSize"

# See https://developer.android.com/guide/topics/manifest/activity-element#label
label = "lavagna"

# See https://developer.android.com/guide/topics/manifest/activity-element#lmode
launch_mode = "standard"

# See https://developer.android.com/guide/topics/manifest/activity-element#screen
orientation = "landscape"

# See https://developer.android.com/guide/topics/manifest/activity-element#resizeableActivity
resizeable_activity = false

# See https://developer.android.com/guide/topics/manifest/intent-filter-element
#
# Note: there can be several .intent_filter entries.
[[package.metadata.android.application.activity.intent_filter]]

# See https://developer.android.com/guide/topics/manifest/action-element
actions = ["android.intent.action.VIEW"]

# See https://developer.android.com/guide/topics/manifest/category-element
categories = ["android.intent.category.BROWSABLE","android.intent.category.DEFAULT"]

# See https://developer.android.com/guide/topics/manifest/data-element
[[package.metadata.android.application.activity.intent_filter.data]]
scheme = "lavagna+wss"
