[package]
name = "lavagna_collab"
version = "1.0.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.3"
futures-timer = { version = "3" }
lavagna_core = { path = "../lavagna_core" }
log = "0.4"
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", rev = "50c1e69" }
serde_json = "1.0"
tokio = "1.12"