[package]
name = "lavagna_collab"
version = "1.0.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.3"
futures-timer = { version = "3" }
lavagna_core = { path = "../lavagna_core" }
log = "0.4"
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", rev = "932fbd600f795e8654720ed2f5f556eef11389c9" }
serde_json = "1.0"
tokio = { version = "1.21", features = ["sync", "rt", "rt-multi-thread"] }
