[package]
name = "lavagna_collab"
version = "1.1.2"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.3"
futures-timer = { version = "3" }
lavagna_core = { path = "../lavagna_core", version = "1.1.2" }
log = "0.4"
matchbox_socket = { git = "https://github.com/alepez/matchbox", rev = "a6fbe22f1fd3ee745757e92ac024b8bc44b06a54" }
serde_json = "1.0"
tokio = { version = "1.21", features = ["sync", "rt", "rt-multi-thread"] }
