[package]
name = "lavagna_core"
version = "1.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
line_drawing = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }