[package]
name = "lavagna_pixels"
version = "1.0.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.9"
lavagna_collab = { path = "../lavagna_collab" }
lavagna_core = { path = "../lavagna_core" }
log = "0.4"
pixels = "0.9"
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "8646cbc" }