[package]
name = "lavagna_pixels"
version = "1.1.2"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.9"
lavagna_collab = { path = "../lavagna_collab", version = "1.1.2" }
lavagna_core = { path = "../lavagna_core", version = "1.1.2" }
log = "0.4"
pixels = "0.10.0"
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = { version = "0.19", default-features = false, features = ["links"] }

[dependencies.winit]
version = "0.27"
default-features = false
features = ["x11"]
