[package]
name = "lavagna-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_embedded_assets = "0.7.0"
bevy_framepace = "0.12"
bevy_ggrs = { version = "0.12", features = [] } # TODO Add "wasm-bindgen" feature to work properly on wasm
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
bevy_pancam = "0.8.0"
bevy_prototype_lyon = "0.8.0"
ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send"]}
matchbox_socket = "0.6.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

