[package]
name = "lavagna-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_embedded_assets = "0.7.0"
bevy_framepace = "0.12"
bevy_pancam = "0.8.0"
bevy_prototype_lyon = "0.8.0"
futures = "0.3"
futures-timer = { version = "3" }
matchbox_socket = "0.6.1"
serde_json = "1.0"
tokio = { version = "1.21", features = ["sync", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
